# solana-store

./: Cargo.toml
Program/: Cargo.toml  README.md
Program/src/: error.rs  instruction.rs  lib.rs  processor.rs
Program/tests/: functional.rs
cli/: Cargo.toml
cli/src/: app.rs  lib.rs
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
tests/: functional.rs
